apps/bluetooth-panel/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bluetooth-panel
  labels:
    istio.io/dataplane-mode: ambient
