apps/bluetooth-panel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluetooth-panel-service
spec:
  type: ClusterIP
  selector:
    app: bluetooth-panel
  ports:
    - port: 8080
      targetPort: 8080
