apps/bluetooth-panel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluetooth-panel-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - bluetooth.dc.home
      secretName: homelab-tls
  rules:
  - host: bluetooth.dc.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bluetooth-panel-service
            port:
              number: 8080
